feat(main): initial implementation of input with multiple data, and update repo